Ensure background color works in dark mode on secondary pages

--- a/src/css/universal.css
+++ b/src/css/universal.css
@@ -1,5 +1,5 @@
 *, *:before, *:after { box-sizing: border-box; }
-body { margin: 0; font-family: 'Consolas', monospace; color: var(--text-color);}
+body { margin: 0; font-family: 'Consolas', monospace; color: var(--text-color); background-color: var(--background-color);}
 
 .no-whitespace { padding: 0; margin: 0;}
 
